src/objects/AdvancedProfiling__c.object
<CustomObject>
    <fields>
        <fullName>PreferredRestorativeImplantSystem__c</fullName>
        <label>Preferred Restorative Implant System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dentsply Sirona (i.e. Astra, Ankylos)</fullName>
                </value>
                <value>
                    <fullName>Straumann</fullName>
                </value>
                <value>
                    <fullName>Neodent</fullName>
                </value>
                <value>
                    <fullName>Nobel</fullName>
                </value>
                <value>
                    <fullName>Implant Direct</fullName>
                </value>
                <value>
                    <fullName>Hiossen</fullName>
                </value>
                <value>
                    <fullName>Zimmer/3i</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProphyPaste__c</fullName>
        <label>Prophy Paste</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dentsply Sirona (i.e. Crescent Cups / Nupro)</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReferredTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please Select a Lab.</inlineHelpText>
        <label>CBCT Scans Referred To</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria. (Account&apos;s specialty must be a &quot;Lab&quot;)</errorMessage>
            <filterItems>
                <field>Account.Sub_Account_Type__c</field>
                <operation>equals</operation>
                <value>Lab</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Advanced_Profiling1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TemporaryFillingMaterials__c</fullName>
        <label>Temporary Filling Materials</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dentsply Sirona (i.e. Integrity)</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UniqueRecordIdentifier__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used to prevent duplicate records per Account. Only one record is allowed per Account. Set by process builder.</description>
        <externalId>true</externalId>
        <label>Unique Record Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ofClearAlignersNewStartsMonth__c</fullName>
        <inlineHelpText># of new patients starting a Clear Aligner treatment</inlineHelpText>
        <label># of Clear Aligners (New Starts)/month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ofFillingsClassIIIIVVMonth__c</fullName>
        <label># of Fillings (Class III, IV, V)/month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ofFillingsClassIIMonth__c</fullName>
        <label># of Fillings (Class II)/month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ofFillingsClassIMonth__c</fullName>
        <label># of Fillings (Class I)/month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ofImplantPlacementsMonthFreehand__c</fullName>
        <inlineHelpText>The Doctor performs Implant treatments manually</inlineHelpText>
        <label># of Implant Placements/month - Freehand</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ofImplantPlacementsMonthGuided__c</fullName>
        <inlineHelpText>Implant Treatment using technology to plan &amp;guide the doctor through the surgical process for better surgical and prosthetic outcomes</inlineHelpText>
        <label># of Implant Placements/month- Guided</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ofImplantRestorationsMonth__c</fullName>
        <label># of Implant Restorations/month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ofNightguardsMonth__c</fullName>
        <label># of Nightguards/month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ofOrthoReferredOutMonth__c</fullName>
        <label># of Ortho Referred Out (to spec.)/month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ofRCTReferredOutMonth__c</fullName>
        <label># of RCT Referred Out (to spec.)/month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ofRetainersMonth__c</fullName>
        <label># of Retainers/month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ofRootCanalTreatmentsMonth__c</fullName>
        <label># of Root Canal Treatment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ofSportsguardsMonth__c</fullName>
        <label># of Sportsguards/month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ofTraditionalOrthoBracketsMonth__c</fullName>
        <inlineHelpText># of new patients starting a braces treatment</inlineHelpText>
        <label># of Traditional Ortho - Brackets/month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Advanced Profiling</label>
    <nameField>
        <displayFormat>AP{0000}</displayFormat>
        <label>Advanced Profiling Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Advanced Profiling</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>